While processing changes in the source, don't process selections.

Because the proxy hadn't processed the rowsInserted or rowsRemoved
signal yet, it was creating corrupt internal data.

Possible crash fix. Please retest.

BUG: 253108